--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
             </tr>
             <tr>
                 <th scope="row">12:00am - 1:00am</th>
-                <td>talking</td>
+                <td><strong>Lifeline</strong></td>
                 <td>1 hour</td>
-                <td></td>
+                <td>important!</td>
             </tr>
             <tr>
                 <th scope="row">1:00am - 5:30am</th>
