--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             height: 100%;
             background-color: #FCF8E3;
             z-index: -1;
-            animation: loading 19s ease-in-out 1;
+            animation: loading 19s linear 1;
         }
 
         @keyframes highlighter {
